# NetSource

./: .gitignore  ReadMe.md  main.py  pyproject.toml
models/: settings.py
services/: audio.py  schedule.py  settings.py  tts.py
ui/: app.py  home.py  netsource.kv
utils/: audio.py
utils/audio/: buffers.py  converters.py
